--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(test)
+project(csvreader)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(test main.cpp table.cpp table.h)
+add_executable(csvreader main.cpp table.cpp table.h)
